# bevy_frame_count_subscriber

./: Cargo.toml  README.md
src/: cache_system.rs  config.rs  formatter.rs  lib.rs  plugin.rs  statics.rs  subscriber.rs  subscriber_layer.rs
