[package]
name = "bevy_frame_count_subscriber"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"

[dependencies.bevy]
version = "0.13"
default-features = false
