[package]
name = "bevy_frame_count_subscriber"
version = "0.1.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3"
tracing-log = "0.2"
tracing = "0.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "f91fd322b77d4bb6d0c8d57f3849adbd86ac0b35"
default-features = false
